[FIXED] Small issues with IntelligentSearchBox
Squashed commit of the following:

commit 3013e4347f05ed8db89f6b06695079682a6114e9
Author: Pedro Ferreira <jose.pedro.ferreira@cern.ch>
Date:   Wed Jul 22 10:55:07 2009 +0200

    [FIXED] JS code - according to jslint

commit bfdbf386f18cd746b9d6e2ceb0cd428b3141ee1e
Author: Pedro Ferreira <jose.pedro.ferreira@cern.ch>
Date:   Wed Jul 22 10:32:16 2009 +0200

    [FIXED] HTML escaping for IntelligentSearchBox

commit 0c756e9cc753d68a0ec030aea0a16d0c8f071493
Author: Pedro Ferreira <jose.pedro.ferreira@cern.ch>
Date:   Wed Jul 22 10:14:23 2009 +0200

    [FIXED] Small issues with IntelligentSearchBox

    - Bug when category path was length 1;
    - Some style improvements;
    - Changed some wording;

--- a/indico/htdocs/css/Default.css
+++ b/indico/htdocs/css/Default.css
@@ -4865,6 +4865,7 @@ div.dialogButtons {
     border: 1px solid #888888;
     width: 250px;
     overflow: hidden;
+    background-color: white;
 }
 
 .suggestionBoxList {
@@ -4876,7 +4877,7 @@ div.dialogButtons {
 .suggestionBoxList li {
     list-style-type: none;
     padding: 3px;
-    border-bottom:1px solid #DDDDDD;
+    border-top:1px solid #DDDDDD;
     cursor: pointer;
 }
 
@@ -4911,6 +4912,8 @@ div.dialogButtons {
     font-size:9pt;
     font-style:italic;
     text-align:center;
+    margin-top: 5px;
+    margin-bottom: 3px;
 }
 
 .searchSuggestionHelpBox {
@@ -4920,5 +4923,4 @@ div.dialogButtons {
     font-style: italic;
     margin: 0 0 0;
     padding: 5px;
-    border-bottom:1px solid #DDDDDD;
 }
